# srv1

./: Dockerfile.srv1  Dockerfile.srv1-build  artifacts.yaml  client_generator.py  setup.cfg  strato-requirements.txt
alembic/: README  alembic.ini
deploy/: srv1-api.yml  srv1-worker.service  srv1-worker.yml
etc/: logconf.json  uwsgi.yml
srv1/: config.py
srv1-client/: setup.py
srv1/consts/: event_types.py  my_endpoint_status.py
srv1/db/: common.py  setup.py
srv1/managers/: my_endpoint.py
srv1/nginx-config_repo/config_files/: strato-srv1-config.json
srv1/resources/api/v2/srv1/: my_endpoint.py
srv1/rootfs-star_repo/: manifesto.yaml
srv1/rootfs-star_repo/py/strato/installation/services/: controlservices.yaml
srv1/srv1/: .coveragerc  .gitignore  Makefile  README.md  artifacts.yaml  dev-requirements.txt  dirbalak.manifest  requirements.txt  skipper.yaml
srv1/srv1/alembic/: env.py
srv1/srv1/deploy/: srv1-api.service  srv1-deploy.spec  srv1-monitor.service
srv1/srv1/etc/: policy.json
srv1/srv1/srv1/: api.py  celery_app.py
srv1/srv1/srv1/db/models/: __init__.py  my_endpoint.py
srv1/srv1/srv1/managers/: health.py
srv1/srv1/srv1/utils/: events.py
srv1/srv1/tests/subsystem/: conftest.py  logconf.json
srv1/srv1/tests/ut/: nose2.cfg  test_health.py  test_my_endpoint.py
srv1/strato-iodocs_repo/: generate_iodocs.py
tests/subsystem/: base.py  docker-compose.yml  nose2.cfg  test_health.py  test_my_endpoint.py  tools.py
tests/subsystem/wiremock/events/: event_register.json  event_submit.json
tests/ut/: base.py
(+1 files in other folders)
