[metadata]
name = srv1
summary = srv1
description-file =
    README.md
author = Stratoscale
author-email = support@stratoscale.com
home-page = http://github.com/stratoscale/srv1.git
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[bdist_rpm]
release = 1
packager = stratoscale@stratoscale.com
doc_files = README.rst
no_autoreq = true
build_requires = python2-devel

[files]
packages =
    srv1
data_files =
    share/srv1 =
        setup.cfg
    share/srv1/etc = etc/*
    share/srv1/alembic = alembic/*

[flake8]
ignore = E501,E123,T002,E402
max-line-length=145
jobs=auto
